--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -521,34 +521,38 @@
             // ==============================================================================================
 
             $("#modal-promotion").one("append", function(){
-                $.getJSON("https://cpromotion.herokuapp.com/list_message").done(function(data) {
-                    console.log("entre");
-                    for( var pro=0; pro<data.length; pro++) {
-                        if(parseInt(data[pro].fields.promotion) === parseInt($("#modal-promo-name").attr("data-id"))){
-                            $("#created-message").prepend(
-                                "<div class='form-group'>" +
-                                    "<label for='exampleInputEmail1'>"+data[pro].fields.mail+": </label>" +
-                                    "<div class='promo-message-tittle'>"+data[pro].fields.message+"</div>" +
-                                "</div>"+
-                                "<hr>"
-                            );
+                setTimeout(function(){
+                    $.getJSON("https://cpromotion.herokuapp.com/list_message").done(function(data) {
+                        for( var pro=0; pro<data.length; pro++) {
+                            if(parseInt(data[pro].fields.promotion) === parseInt($("#modal-promo-name").attr("data-id"))){
+                                $("#created-message").prepend(
+                                    "<div class='form-group'>" +
+                                        "<label for='exampleInputEmail1'>"+data[pro].fields.mail+": </label>" +
+                                        "<div class='promo-message-tittle'>"+data[pro].fields.message+"</div>" +
+                                    "</div>"+
+                                    "<hr>"
+                                );
+                            }
                         }
-                    }
-                });
-               $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
-                    if( data.message === "logged"){
-                        $(".email-message").show();
-                        $(".text-message").show();
-                        $("#btn-send-commit").show();
-                    } else {
-                        $(".email-message").hide();
-                        $(".text-message").hide();
-                        $("#btn-send-commit").hide();
-                        $(".alert-logged-messsage").show();
-                    }
-                }).fail(function(jqxhr, textStatus, error) {
-                    var err = textStatus + ", " + error;
-               });
+                    });
+                   $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
+                        if( data.message === "logged"){
+                            $(".email-message").show();
+                            $(".text-message").show();
+                            $("#btn-send-commit").show();
+                        } else {
+                            $(".email-message").hide();
+                            $(".text-message").hide();
+                            $("#btn-send-commit").hide();
+                            $(".alert-logged-messsage").show();
+                        }
+                    }).fail(function(jqxhr, textStatus, error) {
+                        var err = textStatus + ", " + error;
+                   });
+                   $("#loaded-promotion-modal").hide();
+                   $(".modal-box").modal('show');
+                }, 800);
+
             });
             // ==============================================================================================
             // Categories controller
@@ -739,9 +743,6 @@
                                     "</div>" +
                                 "</div>"
                             );
-
-                            $(".modal-box").modal('show');
-
                         }
                     }
 
