Center div loading

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -456,8 +456,19 @@
     <article id="loaded-promotion-modal">loading</article>
     <script type="text/javascript">
         $(document).ready(function () {
-            $("#loaded-promotion-modal").height($(window).height());
-            $("#loaded-promotion-modal").width($(window).width());
+            $("#loaded-promotion-modal").height($(document).height());
+            $("#loaded-promotion-modal").width($(document).width());
+
+            jQuery.fn.center = function () {
+                this.css("position","absolute");
+                this.css("top", Math.max(0, (($(window).height() - $(this).outerHeight()) / 2) +
+                                                            $(window).scrollTop()) + "px");
+                this.css("left", Math.max(0, (($(window).width() - $(this).outerWidth()) / 2) +
+                                                            $(window).scrollLeft()) + "px");
+                return this;
+            };
+
+            $("#loaded-promotion-modal").center();
             // ==============================================================================================
             // Add Message in promotion controller
             // ==============================================================================================
@@ -535,7 +546,7 @@
                             }
                         }
                     });
-                   $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
+                    $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
                         if( data.message === "logged"){
                             $(".email-message").show();
                             $(".text-message").show();
@@ -548,9 +559,9 @@
                         }
                     }).fail(function(jqxhr, textStatus, error) {
                         var err = textStatus + ", " + error;
-                   });
-                   $("#loaded-promotion-modal").hide();
-                   $(".modal-box").modal('show');
+                    });
+                    $("#loaded-promotion-modal").hide();
+                    $(".modal-box").modal('show');
                 }, 800);
 
             });
